@@ -32,13 +32,10 @@ import org.junit.Test;
 
 import java.io.ByteArrayInputStream;
 import java.io.File;
-import java.io.FileInputStream;
 import java.net.URI;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -48,6 +45,7 @@ import java.util.Map;
 import java.util.Random;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.apache.jackrabbit.oak.plugins.index.elastic.util.ElasticIndexUtils.toByteArray;
 import static org.apache.jackrabbit.oak.plugins.index.elastic.util.ElasticIndexUtils.toDoubles;
@@ -55,79 +53,6 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
 
 public class ElasticSimilarQueryTest extends ElasticAbstractQueryTest {
-
-    /*
-    This test mirror the test org.apache.jackrabbit.oak.plugins.index.lucene.LuceneIndexQueryTest#testRepSimilarAsNativeQuery
-    Exact same test data, to test out for feature parity
-    The only difference is the same query in lucene returns the doc itself (the one that we need similar docs of) as part of search results
-    whereas in elastic, it doesn't.
-     */
-    @Test
-    public void repSimilarAsNativeQuery() throws Exception {
-
-        createIndex(true);
-
-        String nativeQueryString = "select [jcr:path] from [nt:base] where " +
-                "native('elastic-sim', 'mlt?stream.body=/test/c&mlt.fl=:path&mlt.mindf=0&mlt.mintf=0')";
-        Tree test = root.getTree("/").addChild("test");
-        test.addChild("a").setProperty("text", "Hello World");
-        test.addChild("b").setProperty("text", "He said Hello and then the world said Hello as well.");
-        test.addChild("c").setProperty("text", "He said Hi.");
-        root.commit();
-
-        assertEventually(() -> assertQuery(nativeQueryString, Arrays.asList("/test/c", "/test/b")));
-    }
-
-    /*
-    This test mirror the test org.apache.jackrabbit.oak.plugins.index.lucene.LuceneIndexQueryTest#testRepSimilarQuery
-    Exact same test data, to test out for feature parity
-    The only difference is the same query in lucene returns the doc itself (the one that we need similar docs of) as part of search results
-    whereas in elastic, it doesn't.
-     */
-    @Test
-    public void repSimilarQuery() throws Exception {
-        createIndex(false);
-
-        String query = "select [jcr:path] from [nt:base] where similar(., '/test/a')";
-        Tree test = root.getTree("/").addChild("test");
-        test.addChild("a").setProperty("text", "Hello World Hello World");
-        test.addChild("b").setProperty("text", "Hello World");
-        test.addChild("c").setProperty("text", "World");
-        test.addChild("d").setProperty("text", "Hello");
-        test.addChild("e").setProperty("text", "Bye Bye");
-        test.addChild("f").setProperty("text", "Hello");
-        test.addChild("g").setProperty("text", "World");
-        test.addChild("h").setProperty("text", "Hello");
-        root.commit();
-
-        assertEventually(() -> assertQuery(query,
-                Arrays.asList("/test/a", "/test/b", "/test/c", "/test/d", "/test/f", "/test/g", "/test/h")));
-    }
-
-    /*
-    This test mirror the test org.apache.jackrabbit.oak.plugins.index.lucene.LuceneIndexQueryTest#testRepSimilarXPathQuery
-    Exact same test data, to test out for feature parity
-    The only difference is the same query in lucene returns the doc itself (the one that we need similar docs of) as part of search results
-    whereas in elastic, it doesn't.
-     */
-    @Test
-    public void repSimilarXPathQuery() throws Exception {
-        createIndex(false);
-
-        String query = "//element(*, nt:base)[rep:similar(., '/test/a')]";
-        Tree test = root.getTree("/").addChild("test");
-        test.addChild("a").setProperty("text", "Hello World Hello World");
-        test.addChild("b").setProperty("text", "Hello World");
-        test.addChild("c").setProperty("text", "World");
-        test.addChild("d").setProperty("text", "Hello");
-        test.addChild("e").setProperty("text", "Bye Bye");
-        test.addChild("f").setProperty("text", "Hello");
-        test.addChild("g").setProperty("text", "World");
-        test.addChild("h").setProperty("text", "Hello");
-        root.commit();
-        assertEventually(() -> assertQuery(query, XPATH,
-                Arrays.asList("/test/a", "/test/b", "/test/c", "/test/d", "/test/f", "/test/g", "/test/h")));
-    }
 
     @Test
     public void repSimilarWithStopWords() throws Exception {
@@ -150,11 +75,10 @@ public class ElasticSimilarQueryTest extends ElasticAbstractQueryTest {
         root.commit();
 
         // Matches due to terms Hello or bye should be ignored
-        assertEventually(() -> assertQuery(nativeQueryStringWithStopWords,
-                Arrays.asList("/test/a", "/test/e", "/test/f")));
+        assertEventually(() -> assertQuery(nativeQueryStringWithStopWords, List.of("/test/a", "/test/e", "/test/f")));
 
         assertEventually(() -> assertQuery(nativeQueryStringWithoutStopWords,
-                Arrays.asList("/test/a", "/test/b", "/test/c", "/test/d", "/test/e", "/test/f")));
+                List.of("/test/a", "/test/b", "/test/c", "/test/d", "/test/e", "/test/f")));
     }
 
     @Test
@@ -175,11 +99,10 @@ public class ElasticSimilarQueryTest extends ElasticAbstractQueryTest {
 
         // Matches because of term Hello should be ignored since wl <6 (so /test/ should NOT be in the match list)
         // /test/d should be in match list (because of Worlds term)
-        assertEventually(() -> assertQuery(nativeQueryStringWithMinWordLength,
-                Arrays.asList("/test/a", "/test/c", "/test/d")));
+        assertEventually(() -> assertQuery(nativeQueryStringWithMinWordLength, List.of("/test/a", "/test/c", "/test/d")));
 
         assertEventually(() -> assertQuery(nativeQueryStringWithoutMinWordLength,
-                Arrays.asList("/test/a", "/test/b", "/test/c", "/test/d")));
+                List.of("/test/a", "/test/b", "/test/c", "/test/d")));
     }
 
     @Test
@@ -204,7 +127,25 @@ public class ElasticSimilarQueryTest extends ElasticAbstractQueryTest {
         String query = "select [jcr:path] from [nt:base] where similar(., '" + p + "')";
 
         assertEventually(() -> assertQuery(query,
-                Arrays.asList(p, "/test/b", "/test/c", "/test/d", "/test/f", "/test/g", "/test/h")));
+                List.of(p, "/test/b", "/test/c", "/test/d", "/test/f", "/test/g", "/test/h")));
+    }
+
+    /**
+     * Validates the workaround for <a href="https://github.com/elastic/elasticsearch/pull/94518">94518</a> produces the
+     * expected results
+     */
+    @Test
+    public void repSimilarQueryWithIgnoredMetadataField() throws Exception {
+        createIndex(false);
+        Tree test = root.getTree("/").addChild("test");
+
+        // the max keyword length is 256, this field will be then listed as _ignored
+        test.addChild("a").setProperty("text", ElasticTestUtils.randomString(1000));
+        root.commit();
+
+        String query = "select [jcr:path] from [nt:base] where similar(., '/test/a')";
+
+        assertEventually(() -> assertQuery(query, List.of("/test/a")));
     }
 
     @Test
@@ -278,7 +219,7 @@ public class ElasticSimilarQueryTest extends ElasticAbstractQueryTest {
 
         for (String line : IOUtils.readLines(Files.newInputStream(file.toPath()), Charset.defaultCharset())) {
             String[] split = line.split(",");
-            List<Double> values = Arrays.stream(split).skip(1).map(Double::parseDouble).collect(Collectors.toList());
+            List<Double> values = Stream.of(split).skip(1).map(Double::parseDouble).collect(Collectors.toList());
             byte[] bytes = toByteArray(values);
             List<Double> actual = toDoubles(bytes);
             assertEquals(values, actual);
@@ -305,10 +246,10 @@ public class ElasticSimilarQueryTest extends ElasticAbstractQueryTest {
         URI uri = getClass().getResource("/org/apache/jackrabbit/oak/query/fvs.csv").toURI();
         File file = new File(uri);
 
-        Collection<String> children = new LinkedList<>();
+        List<String> children = new LinkedList<>();
         for (String line : IOUtils.readLines(Files.newInputStream(file.toPath()), Charset.defaultCharset())) {
             String[] split = line.split(",");
-            List<Double> values = Arrays.stream(split).skip(1).map(Double::parseDouble).collect(Collectors.toList());
+            List<Double> values = Stream.of(split).skip(1).map(Double::parseDouble).collect(Collectors.toList());
             byte[] bytes = toByteArray(values);
             List<Double> actual = toDoubles(bytes);
             assertEquals(values, actual);
